fix: viewport height on ios PWA

--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,16 @@
   }
 }
 
+html, body {
+  width: 100%;
+  height: 100%;
+  min-height: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: #121213;
+  overflow: hidden;
+}
+
 #root {
   width: 1126px;
   max-width: 100%;
@@ -64,10 +74,10 @@
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
-}
-
-body {
-  margin: 0;
+  padding-top: env(safe-area-inset-top, 0px);
+  padding-bottom: env(safe-area-inset-bottom, 0px);
+  padding-left: env(safe-area-inset-left, 0px);
+  padding-right: env(safe-area-inset-right, 0px);
 }
 
 h1,
